<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Desktop Addons</string>
    <string name="app_author">Maintained by Dawncraft Studio</string>

    <string name="activity_settings">Settings</string>
    <string name="developer_say">Developer want to say</string>
    <string name="developer_say_what">受Android限制, 应用需要在启动一次后才能开启后台服务, 所以被迫需要一个界面, 不过你也可以在这里调整一些设置</string>
    <!-- 请原谅我的中式英语(笑 -->
    <string name="check_shizuku">Shizuku support</string>
    <string name="shizuku_not_support">Shizuku only support Android 6.0 and above</string>
    <string name="shizuku_not_found">You need install Shizuku or Sui if root to make some functions work</string>
    <string name="shizuku_no_permission">Shizuku: %d, Click to grant permissions</string>
    <string name="shizuku_has_permission">Shizuku: %d, permissions are granted</string>
    <string name="request_permission_successfully">You have allowed all permissions, thank you!</string>
    <string name="keep_alive">Keep alive</string>
    <string name="keep_alive_summary">Launch a foreground service to keep APP running (May increase power consumption)</string>
    <string name="foreground_channel_name">Foreground notification</string>
    <string name="is_running">Desktop Addons is running...</string>
    <string name="hide_app_icon">Hide app icon</string>
    <string name="hide_app_icon_summary">Invalid above Android 10, you can open this from app setting or ADB after hiding</string>
    <string name="settings_wallpaper">Live wallpaper</string>
    <string name="wallpaper_list">Wallpaper list</string>
    <string name="wallpaper_list_summary">View your wallpapers</string>
    <string name="settings_app_widget">APP widget</string>
    <string name="sentence_list">Submit your sentences</string>
    <string name="sentence_list_summary">Submit your sentences to Dawncraft server (Login needed)</string>
    <string name="ncp_data_source">Set data source for NCP widget (Only affect website)</string>
    <string-array name="ncp_data_sources">
        <item>Tencent News</item>
        <item>DXY·DX Doctor</item>
        <item>Baidu</item>
        <item>Sogou</item>
        <item>Sina Weibo</item>
        <item>Zhihu</item>
        <item>Gaode Map</item>
        <item>People</item>
        <item>Netease News</item>
        <item>Ifeng</item>
        <item>Toutiao</item>
        <item>Ali health</item>
        <item>UC</item>
        <item>GitHub</item>
    </string-array>
    <string name="ncp_update_interval">Set refresh interval for NCP widget</string>
    <string name="ncp_update_interval_unit">%d Minute(s)</string>
    <string name="ncp_update_interval_manual">Refresh manually</string>
    <string name="ncp_update_interval_edit_message">Will not update if not connect to network or low battery</string>
    <string name="ncp_update_interval_edit_hint">Minute, 0 is refreshing manually</string>
    <string name="settings_notification">Notification widget</string>
    <string name="notification_policy_access_permission">Open notification policy access settings</string>
    <string name="no_notification_policy_access_permission">Have no permission, click to open settings</string>
    <string name="has_notification_policy_access_permission">Have permission</string>
    <string name="enable_zen_mode_switch">Enable zen mode switch</string>
    <string name="enable_zen_mode_switch_summary">Will be applied immediately</string>
    <string name="settings_quick_setting">Quick setting tiles</string>
    <string name="fifthg_switch">Enable 5G switch</string>
    <string name="fifthg_switch_summary">No need if there is the same tile in your system, only support XiaoMi and Huawei (Huawei need Shizuku)</string>
    <string name="dev_tiles_switch">Enable debug layout</string>
    <string name="dev_tiles_switch_summary">If you can access Quick setting developer tile in development settings, don\'t use this (need Shizuku)</string>
    <string name="settings_user">Dawncraft user</string>
    <string name="user_not_log_in">Not log in</string>
    <string name="user_log_in_summary">Log in to sync settings and submit your sentences</string>
    <string name="user_logout">Click to log out</string>
    <string name="user_logout_confirm">Are you sure to log out?</string>
    <string name="settings_about">About</string>
    <string name="check_update">Click to check update</string>
    <string name="get_update">Click to get update</string>
    <string name="version">Version: %s</string>
    <string name="checking_update">Checking update</string>
    <string name="update_error">Can\'t find update, please check network</string>
    <string name="no_update">Up to date</string>
    <string name="has_update">Found update: %s</string>
    <string name="notify_update">There is a new version of this APP</string>
    <string name="update_dialog_time">Release time: %s</string>
    <string name="update_dialog_size">Size: %s</string>
    <string name="update_dialog_message">Change log:</string>
    <string name="update_dialog_ignore">Ignore</string>
    <string name="update_dialog_download">Go to download</string>
    <string name="visit_github">Visit GitHub</string>
    <string name="visit_github_summary">Come to see our GitHub</string>
    <string name="library_licenses">Third library licenses</string>
    <string name="library_licenses_summary">Click to view</string>

    <string name="activity_wallpaper">Wallpaper settings</string>
    <string name="fragment_wallpaper_editor">Edit wallpaper</string>

    <string name="fragment_sentence">Sentence list</string>
    <string name="get_sentences_failed">Can\'t get sentences</string>
    <string name="no_more_sentences">No more sentences</string>
    <string name="sentence_detail">Sentence detail #%d</string>
    <string name="sentence">Sentence:</string>
    <string name="sentence_author">Author:</string>
    <string name="sentence_from">From:</string>
    <string name="sentence_committer">Committer:</string>
    <string name="sentence_copy_declaration">We are not responsible for possible copyright issues because of this sentence.</string>
    <string name="sentence_copy_success">Copy sentence successfully</string>
    <string name="sentence_pin">Pin</string>
    <string name="sentence_pin_failed">Pin sentence to launcher failed</string>
    <string name="add_sentence">Add sentence</string>
    <string name="sentence_hint">Sentence</string>
    <string name="sentence_author_hint">Author</string>
    <string name="sentence_from_hint">From(Optional)</string>
    <string name="sentence_agreement">*When submit, you are considered to have agreed to our user agreement.</string>
    <string name="sentence_need_login">You must login to submit sentences</string>

    <string name="fragment_login">Log in</string>
    <string name="account">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password? Find it.</string>
    <string name="find_password">Find it</string>
    <string name="login">Login</string>
    <string name="third_login">Use third login</string>
    <string name="login_use_qq">QQ</string>
    <string name="login_use_wechat">WeChat</string>
    <string name="logging_in">Logging in, please wait</string>
    <string name="login_success">Log in successfully</string>
    <string name="already_login">Already log in</string>
    <string name="invalid_account">Please input email</string>
    <string name="invalid_password">Please input password</string>
    <string name="wrong_user_or_password">Wrong user or password</string>
    <string name="login_error">Unknown error</string>

    <string name="invalid_url">Invalid url</string>
    <string name="open_in_browser">Open in browser</string>

    <string name="ncp_app_widget_config">Select region</string>
    <string name="invalid_app_widget">Invalid APP widget ID</string>
    <string name="get_area_list_failed">Get area list failed</string>
    <string name="search_area">Search area</string>
    <string name="view_subarea">View subarea</string>

    <string name="sentence_app_widget_config">Select sentence</string>
    <string name="sentence_source">Sentence source</string>
    <string-array name="sentence_sources">
        <item>Hitokoto</item>
        <item>Dawncraft</item>
    </string-array>
    <string name="sentence_number">Sentence order number</string>
    <string name="sentence_number_hint">Left blank for random sentences</string>
    <string name="sentence_not_found">Can\'t find this sentence</string>
    <string name="sentence_get_not_implemented">Pinning Hitokoto sentence has not been implemented</string>

    <string name="wallpaper_name">Memorial live wallpaper</string>
    <string name="switch_5g">Switch 5G</string>
    <string name="show_layout_border">Show layout border</string>
    <string name="sentence_app_widget_name">Sentence</string>
    <string name="sentence_get_failed">Can\'t get sentence. Click to retry.</string>
    <string name="ncp_app_widget_name">COVID-19 Stats</string>
    <string name="ncp_app_widget_title">COVID-19 Statistics</string>
    <string name="ncp_app_widget_region">COVID-19 Stats - %s</string>
    <string name="ncp_app_widget_detail">View detail</string>
    <string name="ncp_app_widget_refresh">Refresh</string>
    <string name="ncp_app_widget_time">To date: &#160;</string>
    <string name="ncp_app_widget_update_time">Last update: &#160;</string>
    <string name="ncp_app_widget_confirm">Confirm</string>
    <string name="ncp_app_widget_suspect">Suspect</string>
    <string name="ncp_app_widget_cure">Cure</string>
    <string name="ncp_app_widget_dead">Dead</string>
    <string name="zen_mode_channel_name">Zen mode switch notification</string>
    <string name="zen_mode_channel_desc">Switch zen mode by click the button on notification</string>
    <string name="zen_mode_switch">Switch zen mode</string>
    <string name="zen_mode_close">Zen mode is closed</string>
    <string name="zen_mode_open">Zen mode is opened</string>

    <string name="no_network">No Internet connection.</string>
    <string name="unknown_error">An unknown error occurred.</string>

    <!-- Don't translate these text. -->
    <string name="github_url" translatable="false">https://github.com/Dawncraft/Dawn-Desktop-Addons</string>
    <string name="reset_password_url" translatable="false">https://h5.dawncraft.cc/forgetPassword</string>
    <string name="divider" translatable="false">--------</string>
    <string name="none" translatable="false">-</string>
    <string name="unknown_date" translatable="false">XXXX-XX-XX XX:XX:XX</string>
    <string-array name="value_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

</resources>
