<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="@string/developer_say"
        android:summary="@string/developer_say_what"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:key="hide_app_icon"
        android:title="@string/hide_app_icon"
        android:summary="@string/hide_app_icon_summary"
        android:defaultValue="false"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:title="@string/settings_wallpaper"
        app:iconSpaceReserved="false">

        <Preference
            android:key="wallpaper_scene"
            android:title="@string/wallpaper_scene_setting"
            android:summary="@string/wallpaper_scene_setting_summary"
            app:fragment="io.github.dawncraft.desktopaddons.ui.WallpaperFragment"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_app_widget"
        app:iconSpaceReserved="false">

        <Preference
            android:key="sentence_list"
            android:title="@string/sentence_list"
            android:summary="@string/sentence_list_summary"
            app:fragment="io.github.dawncraft.desktopaddons.ui.SentenceFragment"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="sentence_source"
            android:title="@string/sentence_source"
            android:summary="@string/sentence_source_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="ncp_data_source"
            android:title="@string/ncp_data_source"
            android:entries="@array/ncp_data_sources"
            android:entryValues="@array/value_list"
            android:defaultValue="0"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_notification"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="zen_mode_switch"
            android:title="@string/enable_zen_mode_switch"
            android:summary="@string/enable_zen_mode_switch_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
        <!-- TODO 动态注册/注销广播, 无须重启应用 -->

        <Preference
            android:key="notification_policy_access_permission"
            android:title="@string/notification_policy_access_permission"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false">

            <intent android:action="android.settings.NOTIFICATION_POLICY_ACCESS_SETTINGS" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_user"
        app:iconSpaceReserved="false">

        <Preference
            android:key="user"
            android:title="@string/user_not_log_in"
            android:summary="@string/user_log_in_summary"
            app:icon="@drawable/ic_person" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about"
        app:iconSpaceReserved="false" >

        <Preference
            android:title="@string/app_name"
            android:summary="@string/app_author"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="check_update"
            android:title="@string/check_update"
            app:iconSpaceReserved="false" />

        <Preference
            android:title="@string/visit_github"
            android:summary="@string/visit_github_summary"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Dawncraft/Dawn-Desktop-Addons" />
        </Preference>

        <Preference
            android:title="@string/library_licenses"
            android:summary="@string/library_licenses_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
