<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="io.github.dawncraft.desktopaddons.ui.SettingsFragment"
        android:label="@string/activity_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_wallpaperFragment"
            app:destination="@id/wallpaperFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_sentenceFragment"
            app:destination="@id/sentenceFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/wallpaperFragment"
        android:name="io.github.dawncraft.desktopaddons.ui.WallpaperFragment"
        android:label="@string/fragment_wallpaper"
        tools:layout="@layout/fragment_wallpaper" />

    <fragment
        android:id="@+id/sentenceFragment"
        android:name="io.github.dawncraft.desktopaddons.ui.SentenceFragment"
        android:label="@string/fragment_sentence"
        tools:layout="@layout/fragment_sentence" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="io.github.dawncraft.desktopaddons.ui.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" />

</navigation>
