<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ncp_widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ncp_widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackgraund"
            android:contentDescription="@string/ncp_app_widget_title"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="4dp"
            android:singleLine="true"
            android:text="@string/ncp_app_widget_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/widget_title_size"
            android:textStyle="bold|italic" />

        <!-- app widget 不支持appcompat, 用不了矢量图 -->
        <!--<androidx.appcompat.widget.AppCompatImageButton />-->
        <ImageButton
            android:id="@+id/imageButtonOpen"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/colorBackgraund"
            android:clickable="true"
            android:contentDescription="@string/ncp_app_widget_refresh"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="center"
            android:src="@drawable/ic_open"
            android:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imageButtonRefresh"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/colorBackgraund"
            android:clickable="true"
            android:contentDescription="@string/ncp_app_widget_refresh"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_refresh"
            android:tint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:text="@string/ncp_app_widget_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/widget_time_size" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/unknown_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/widget_time_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:text="@string/ncp_app_widget_update_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/widget_time_size" />

        <TextView
            android:id="@+id/textViewUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/unknown_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/widget_time_size" />

        <!-- 让日期也单行, 防止屏小的手机显示不下 -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/none"
                android:textColor="@color/colorConfirm"
                android:textSize="@dimen/widget_number_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ncp_app_widget_confirm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/widget_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSuspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/none"
                android:textColor="@color/colorSuspect"
                android:textSize="@dimen/widget_number_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ncp_app_widget_suspect"
                android:textColor="@android:color/black"
                android:textSize="@dimen/widget_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/none"
                android:textColor="@color/colorCure"
                android:textSize="@dimen/widget_number_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ncp_app_widget_cure"
                android:textColor="@android:color/black"
                android:textSize="@dimen/widget_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/none"
                android:textColor="@color/colorDead"
                android:textSize="@dimen/widget_number_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ncp_app_widget_dead"
                android:textColor="@android:color/black"
                android:textSize="@dimen/widget_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
